[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scvi_de"
version = "0.12.0"
description = "Default template for PDM package"
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0"}
dependencies = [
    "anndata>=0.10.6",
    "scvi-tools>=1.1.2",
    "scipy>=1.13.0",
    "pandas>=2.1.1",
    "numpy>=1.26.4",
    "mudata>=0.2.3",
    "loguru>=0.7.2",
    "muon>=0.1.6",
    "sparse>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.2",
    "codecov>=2.1.13",
    "hypothesis>=6.108.5",
    "nox>=2024.4.15",
    "pytest>=8.3.2",
    "mypy>=1.11.1",
    "coverage>=7.6.0",
    "pytest-cov>=5.0.0",
    "pytest-random-order>=1.1.1",
    "pytest-xdist>=3.6.1",
    "pre-commit>=3.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/scvi_de"]

[tool.pdm]
distribution = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["revseq"]

[tool.coverage.report]
show_missing = true
fail_under = 100
