[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "scvi_de"
version = "0.14.0"
description = "Default template for PDM package"
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL-3.0"}
dependencies = [
    "anndata>=0.11.3",
    "scvi-tools>=1.2.2",
    "scipy>=1.15.0",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "mudata>=0.3.1",
    "loguru>=0.7.2",
    "muon>=0.1.7",
    "sparse>=0.15.5",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.2",
    "nox>=2024.10.9",
    "pytest>=8.3.4",
    "mypy>=1.14.1",
    "coverage>=7.6.10",
    "pytest-cov>=6.0.0",
    "pytest-random-order>=1.1.1",
    "pytest-xdist>=3.6.1",
    "pre-commit>=4.1.0",
]

[tool.pdm]
distribution = true

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["revseq"]

[tool.coverage.report]
show_missing = true
fail_under = 100
